--- a/data/build.gradle
+++ b/data/build.gradle
@@ -50,7 +50,9 @@ dependencies {
     kapt dataDependencies.roomCompiler
     implementation dataDependencies.roomRxJava
 
+    implementation dataDependencies.firebaseAuth
+    implementation dataDependencies.firebaseCore
+
     testImplementation dataTestDependencies.junit
     testImplementation dataTestDependencies.mockito
-
 }
