--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ allprojects {
     repositories {
         google()
         jcenter()
+        maven { url "https://jitpack.io" }
     }
 }
 
@@ -81,6 +82,7 @@ ext {
     //FireBase
     firebaseAuthVersion = '16.1.0'
     firebaseCoreVersion = '16.0.6'
+    firebaseRxVersion = '1.1.3'
 
 
     presentationDependencies = [
@@ -139,7 +141,8 @@ ext {
             gson           : "com.google.code.gson:gson:$gsonVersion",
             workManager    : "android.arch.work:work-runtime-ktx:$workManagerVersion",
             firebaseAuth   : "com.google.firebase:firebase-auth:$firebaseAuthVersion",
-            firebaseCore   : "com.google.firebase:firebase-core:$firebaseCoreVersion"
+            firebaseCore   : "com.google.firebase:firebase-core:$firebaseCoreVersion",
+            rxFirebase     : "com.github.frangsierra:rx2firebase:$firebaseRxVersion"
     ]
 
     dataTestDependencies = [
