--- a/data/build.gradle
+++ b/data/build.gradle
@@ -34,7 +34,8 @@ dependencies {
 
     api dataDependencies.room
     api dataDependencies.workManager
-
+    api dataDependencies.firebaseAuth
+    api dataDependencies.firebaseCore
 
     implementation dataDependencies.annotations
     implementation dataDependencies.kotlin
@@ -44,14 +45,12 @@ dependencies {
 
     implementation dataDependencies.rxJava
     implementation dataDependencies.rxAndroid
+    implementation dataDependencies.rxFirebase
 
     implementation dataDependencies.gson
 
     kapt dataDependencies.roomCompiler
     implementation dataDependencies.roomRxJava
-
-    implementation dataDependencies.firebaseAuth
-    implementation dataDependencies.firebaseCore
 
     testImplementation dataTestDependencies.junit
     testImplementation dataTestDependencies.mockito
