--- a/build.gradle
+++ b/build.gradle
@@ -83,6 +83,10 @@ ext {
     firebaseAuthVersion = '16.1.0'
     firebaseCoreVersion = '16.0.6'
     firebaseRxVersion = '1.1.3'
+    firebaseStorageVersion = '16.0.1'
+    firebaseDatabaseVersion = '16.0.6'
+
+
 
 
     presentationDependencies = [
@@ -142,7 +146,9 @@ ext {
             workManager    : "android.arch.work:work-runtime-ktx:$workManagerVersion",
             firebaseAuth   : "com.google.firebase:firebase-auth:$firebaseAuthVersion",
             firebaseCore   : "com.google.firebase:firebase-core:$firebaseCoreVersion",
-            rxFirebase     : "com.github.frangsierra:rx2firebase:$firebaseRxVersion"
+            rxFirebase     : "com.github.frangsierra:rx2firebase:$firebaseRxVersion",
+            firebaseStorage: "com.google.firebase:firebase-storage:$firebaseStorageVersion",
+            firebaseDatabase: "com.google.firebase:firebase-database:$firebaseStorageVersion"
     ]
 
     dataTestDependencies = [
