--- a/build.gradle
+++ b/build.gradle
@@ -82,9 +82,10 @@ ext {
     //FireBase
     firebaseAuthVersion = '16.1.0'
     firebaseCoreVersion = '16.0.6'
-    firebaseRxVersion = '1.1.3'
+    firebaseRxVersion = '1.5.6'
     firebaseStorageVersion = '16.0.1'
     firebaseDatabaseVersion = '16.0.6'
+    firebaseFirestoreVersion = '18.2.0'
 
     //osm
     osmVersion = '6.0.0'
@@ -136,23 +137,24 @@ ext {
     ]
 
     dataDependencies = [
-            annotations     : "androidx.annotation:annotation:${androidXToolsVersion}",
-            javaxAnnotation : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
-            javaxInject     : "javax.inject:javax.inject:${javaxInjectVersion}",
-            kotlin          : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
-            rxJava          : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
-            rxAndroid       : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
-            room            : "androidx.room:room-runtime:$roomVersion",
-            roomCompiler    : "androidx.room:room-compiler:$roomVersion",
-            roomRxJava      : "androidx.room:room-rxjava2:$roomVersion",
-            gson            : "com.google.code.gson:gson:$gsonVersion",
-            workManager     : "android.arch.work:work-runtime-ktx:$workManagerVersion",
-            firebaseAuth    : "com.google.firebase:firebase-auth:$firebaseAuthVersion",
-            firebaseCore    : "com.google.firebase:firebase-core:$firebaseCoreVersion",
-            rxFirebase      : "com.github.frangsierra:rx2firebase:$firebaseRxVersion",
-            firebaseStorage : "com.google.firebase:firebase-storage:$firebaseStorageVersion",
-            firebaseDatabase: "com.google.firebase:firebase-database:$firebaseStorageVersion",
-            osm             : "org.osmdroid:osmdroid-android:$osmVersion"
+            annotations              : "androidx.annotation:annotation:${androidXToolsVersion}",
+            javaxAnnotation          : "javax.annotation:jsr250-api:${javaxAnnotationVersion}",
+            javaxInject              : "javax.inject:javax.inject:${javaxInjectVersion}",
+            kotlin                   : "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version",
+            rxJava                   : "io.reactivex.rxjava2:rxjava:${rxJavaVersion}",
+            rxAndroid                : "io.reactivex.rxjava2:rxandroid:${rxAndroidVersion}",
+            room                     : "androidx.room:room-runtime:$roomVersion",
+            roomCompiler             : "androidx.room:room-compiler:$roomVersion",
+            roomRxJava               : "androidx.room:room-rxjava2:$roomVersion",
+            gson                     : "com.google.code.gson:gson:$gsonVersion",
+            workManager              : "android.arch.work:work-runtime-ktx:$workManagerVersion",
+            firebaseAuth             : "com.google.firebase:firebase-auth:$firebaseAuthVersion",
+            firebaseCore             : "com.google.firebase:firebase-core:$firebaseCoreVersion",
+            rxFirebase               : "com.github.FrangSierra:RxFirebase:$firebaseRxVersion",
+            firebaseStorage          : "com.google.firebase:firebase-storage:$firebaseStorageVersion",
+            firebaseDatabase         : "com.google.firebase:firebase-database:$firebaseStorageVersion",
+            firebaseFirestoreDatabase: "com.google.firebase:firebase-firestore:$firebaseFirestoreVersion",
+            osm                      : "org.osmdroid:osmdroid-android:$osmVersion"
     ]
 
     dataTestDependencies = [
